--- a/style.css
+++ b/style.css
@@ -650,36 +650,45 @@ object {
 }
 
 body {
-  background-image: url(http://irontemplates.com/wp-demos/content/themes/ironband/css/colors/pink/bg.jpg);
-  font-size:1em;
+  font-size:1.5em;
   line-height:1.231;
   overflow: hidden;
   max-width: 900px;
   margin: 0 auto;
-  font-family: 'Oswald', sans-serif;
 }
 
 div {
   margin-bottom: 5px;
 }
 
-.site-branding {
+.site-header {
+  font-family: 'Oswald', sans-serif;
   text-align: center;
   margin-top: 20px;
 }
 
-.site-branding .site-title {
+.site-header h1 {
   font-size: 2.5em;
 }
 
-.site-description{
-	font-size: 1.8em;
+.site-header h1 a {
+	color: black;
+	text-decoration: none;
+}
+
+.site-header h1 a:hover {
+	text-decoration: underline;
+}
+
+.site-header .site-description{
+	font-size: 1em;
 	text-align: center;
 }
 
 .post {
   font-family: 'Open-Sans', sans-serif;
   margin-top: 50px;
+  font-size: 20px;
 }
 
 .post .title {
