--- a/style.css
+++ b/style.css
@@ -742,6 +742,12 @@ h2.comments-title {
 	text-align: center;
 }
 
-footer {
+footer.site-footer {
 	margin-top: 100px;
+}
+
+.archive .page-header h1 {
+	margin-top: 20px;
+	text-align: center;
+	font-size: 2em;
 }
