--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ a:active {
 .updated {
 	display: none;
 }
-.single .byline,
+.single .byline, article .byline,
 .group-blog .byline {
 	display: inline;
 }
@@ -689,16 +689,11 @@ div {
 
 .post {
 	font-family: 'Open-Sans', sans-serif;
-	margin-top: 50px;
 	font-size: 18px;
 }
 
-.post .entry-title {
-	font-size: 1.4em;
-}
-
-.post .entry-meta {
-	font-size: 0.8em;
+.post:not(:first-child) {
+	margin-top: 50px;
 }
 
 .post .content {
@@ -746,17 +741,14 @@ footer.site-footer {
 	margin-top: 100px;
 }
 
-.archive .page-header h1 {
-	margin-top: 20px;
-	text-align: center;
-	font-size: 2em;
-}
-
-/* Page */
-.page .entry-header {
+.archive .page-header h1, .entry-header{
 	font-size: 2em;
 	margin-top: 25px;
 	text-align: center;
+}
+
+.post .entry-meta {
+	font-size: 0.5em;
 }
 
 /* Menu */
